Add picture cards

--- a/index.html
+++ b/index.html
@@ -20,16 +20,34 @@
     <div class="hero-container">
         <div class="hero-text">
             <div class="hero-main-text">Some awesome hero main text</div>
-            <div class="hero-secondary-text">Even awesomer hero subtext that goes under the hero text. His palms are sweaty, knees weak, arms are heavy There's vomit on his sweater already, mom's spaghetti. Yabbadabbadoo</div>
+            <div class="hero-secondary-text">Even awesomer hero subtext that goes under the hero text. His palms are sweaty, knees weak, arms are heavy There's vomit on his sweater already, mom's spaghetti.</div>
             <button>Sign Up</button>
         </div>
         <div class="hero-image">
             <img src="https://images.pexels.com/photos/992734/pexels-photo-992734.jpeg" alt="A close-up of cherry blossoms">
         </div>
     </div>
+
+    <div class="cards-information">
+        <div class="cards-heading">Some random information.</div>
+        <div class="cards-container">
+            <div class="card"><img src="https://images.unsplash.com/photo-1573455494057-12684d151bf4" alt="A street in Tokyo">
+                <div>A very cool picture of a street in Tokyo</div>
+            </div>
+            <div class="card"><img src="https://images.unsplash.com/photo-1601042879364-f3947d3f9c16" alt="">
+                <div>Another awesome picture of a street after rain. So shiny.</div>
+            </div>
+            <div class="card"><img src="https://images.unsplash.com/photo-1560865612-e0dd9032adce" alt="">
+                <div>A couple of cool neon cars. Wow so neon and colorful. </div>
+            </div>
+            <div class="card"><img src="https://images.unsplash.com/photo-1536768139911-e290a59011e4" alt="">
+                <div>A very pink picture of a street with a utility pole in the foreground.</div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="footer">
-
+    Yabbadabbadoo
 </div>
 </body>
 </html>
