Edit picture descriptions

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <div class="card"><img src="https://images.unsplash.com/photo-1573455494057-12684d151bf4" alt="A street in Tokyo">
                 <div>A very cool picture of a street in Tokyo</div>
             </div>
-            <div class="card"><img src="https://images.unsplash.com/photo-1601042879364-f3947d3f9c16" alt="">
+            <div class="card"><img src="https://images.unsplash.com/photo-1601042879364-f3947d3f9c16" alt="A street with wet asphalt">
                 <div>Another awesome picture of a street after rain. So shiny.</div>
             </div>
-            <div class="card"><img src="https://images.unsplash.com/photo-1560865612-e0dd9032adce" alt="">
+            <div class="card"><img src="https://images.unsplash.com/photo-1560865612-e0dd9032adce" alt="Cars with a cyberpunk filter">
                 <div>A couple of cool neon cars. Wow so neon and colorful. </div>
             </div>
-            <div class="card"><img src="https://images.unsplash.com/photo-1536768139911-e290a59011e4" alt="">
-                <div>A very pink picture of a street with a utility pole in the foreground.</div>
+            <div class="card"><img src="https://images.unsplash.com/photo-1536768139911-e290a59011e4" alt="A street with a pink filter">
+                <div>A picture of a street with a utility pole in the foreground. Incredibly cyberpunk.</div>
             </div>
         </div>
     </div>
