Add quote and sign up sections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="hero-text">
             <div class="hero-main-text">Some awesome hero main text</div>
             <div class="hero-secondary-text">Even awesomer hero subtext that goes under the hero text. His palms are sweaty, knees weak, arms are heavy There's vomit on his sweater already, mom's spaghetti.</div>
-            <button>Sign Up</button>
+            <button type="button">Sign Up</button>
         </div>
         <div class="hero-image">
             <img src="https://images.pexels.com/photos/992734/pexels-photo-992734.jpeg" alt="A close-up of cherry blossoms">
@@ -45,9 +45,28 @@
             </div>
         </div>
     </div>
+    <div class="quote-container">
+        <div class="quote">
+            <p class="quote-one">Is there a leakage?</p>
+            <p class="quote-two">A leakage of what?</p>
+            <p class="quote-one">I have the seat full of water! Like, full of water!</p>
+            <p class="quote-two">Must be the water</p>
+            <p class="quote-one">Let's add that to the words of wisdom</p>
+            <p class="quote-attribute"> - Chuck Leclerc</p>
+        </div>
+    </div>
+    <div class="sign-up-container">
+        <div class="sign-up-box">
+            <div class="sign-up-content">
+                <div class="sign-up-content-header">Call to action! It's time!</div>
+                <div class="sign-up-content-slogan">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="sign-up-button" type="button">Sign up</button>
+        </div>
+    </div>
 </div>
 <div class="footer">
-    Yabbadabbadoo
+    ATTENTION! Thank you for paying attention.
 </div>
 </body>
 </html>
